--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,20 @@
+#程序启动配置
+server.port=8081
+server.servlet.context-path=/blog
+
 #数据库连接配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url= jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf8&usessl=false&serverTimezone=Asia/Shanghai
 spring.datasource.username= root
 spring.datasource.password= 12345678
 
-#程序启动配置
-server.port=8080
-server.servlet.context-path=/blog
+#配置自动建表：updata:没有表新建，有表更新操作,控制台显示建表语句
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#spring-security配置
+spring.security.user.name=admin
+spring.security.user.password=123456
+
+
 
